          Added function libofx_set_dtd_dir() which allows to set the
          folder in which DTD files are stored. This is needed for local
          installations (e.g. WIN32)
        * libofx.pc.in: depending libraries don't need to link against
          OpenSP themselves, since LibOFX encapsulates it, no need to
          propagate unnecessary dependencies

24/1/2007:  Benoit Grégoire  <bock@step.polymtl.ca>
	* ofx_preproc.cpp:  Now parses the OFX headers to determine the input charset and encoding, and uses libiconv (if available) to convert the encoding since OpenSP can't do it.  The default output is now UTF-8.  This will "do the right thing" for Gnucash 2 and any client that uses UTF-8 strings, but we sould add an interface to let the client chose his prefered output encoding.

9/1/2007:  Benoit Grégoire  <bock@step.polymtl.ca>
	* Adapted patch by Christian Lupien <lupien @at@ physique.usherbrooke.ca> to add processing of the different bank account types in OfxPaymentRequest.  Took this oportunity to correct an API duplication problem before it get's even more complicated to fix:  deleted OfxAccountInfo (OfxAccountData should be used instead) and the global scopt AccountType enum (use the one in OfxAccountData).
	Both of these changes will require source code change in aqbanking.
	* Bump the version ans soname right now so aqbanking can detect it.

8/1/2007:  Benoit Grégoire  <bock@step.polymtl.ca>
	* Release 0.8.3

27/9/2006 Martin Preuss <martin@aquamaniac.de>
	* lib/ofx_preproc.cpp: Make sure all results of string::find are 
          inside the string's length; make sure to erase parts of the string 
          only if the string is long enough. 
          Fixes crash http://bugzilla.gnome.org/show_bug.cgi?id=353986
          Patch supplied by Christian Stimming from GnuCash

25/8/2006:  Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix datatype mismatch in ofx_preproc.cpp
	* Fix gengetopt related build problems on debian based distribution.