@@ -15,6 +15,8 @@
         * libofx.pc.in: depending libraries don't need to link against
           OpenSP themselves, since LibOFX encapsulates it, no need to
           propagate unnecessary dependencies
+        * ofx_utilities.{cpp,h}: added a function to generate a temp file name
+          (works on WIN32 and Linux)
 
 24/1/2007:  Benoit Grégoire  <bock@step.polymtl.ca>
 	* ofx_preproc.cpp:  Now parses the OFX headers to determine the input charset and encoding, and uses libiconv (if available) to convert the encoding since OpenSP can't do it.  The default output is now UTF-8.  This will "do the right thing" for Gnucash 2 and any client that uses UTF-8 strings, but we sould add an interface to let the client chose his prefered output encoding.
